# deepagents

./: .gitignore  2nfmoeqqoveqs9togrece05etsqjgvlc.darc  AGENTS.md  GEMINI.md  manifest
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/docker_agent_bridge_20260419/: index.md  metadata.json  parser_requirements.md  plan.md  spec.md
examples/docker-agent-bridge/: README.md  basic_agent.yaml  content_writer.yaml  portfolio_simplified.yaml  pyproject.toml  team.yaml
examples/docker-agent-bridge/src/docker_agent_bridge/: adapter.py  main.py  mcp.py  models.py  orchestration.py  parser.py  tools.py  utils.py
examples/docker-agent-bridge/tests/: test_main.py  test_mcp.py  test_models.py  test_orchestration.py  test_parser.py  test_portfolio_config.py  test_tools.py
libs/cli/: CHANGELOG.md
libs/deepagents/: CHANGELOG.md
libs/deepagents/deepagents/: graph.py
libs/evals/tests/evals/: conftest.py
libs/partners/daytona/: CHANGELOG.md
libs/partners/modal/: CHANGELOG.md
libs/partners/quickjs/: CHANGELOG.md
libs/partners/runloop/: CHANGELOG.md
libs/repl/: CHANGELOG.md
